--- a/setup.cfg
+++ b/setup.cfg
@@ -7,13 +7,13 @@ url = https://github.com/grburgessp/nazgul
 author_email = jmichaelburgess@gmail.com
 author = J. Michael Burgess
 requires_python = >=3.3.0
-license = GPL-2+
+license = GPL-3
 
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Console
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3)
     Operating System :: POSIX
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
@@ -35,6 +35,7 @@ install_requires =
     matplotlib
     mpltools
     astropy
+    pyipn
     ipyvolume>=0.6.0a2
     pythreejs
     numba
@@ -48,8 +49,7 @@ install_requires =
     mocpy
     ligo.skymap
     networkx==2.3
-    vangogh
-    TLE-tools
+
 
 
 tests_require =
