--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nazgul
-description = A population synthesis code for testing
+description = A code for fitting random Fourier features to time-seires for the IPN
 long_description = file:README.md
 long_description_content_type = text/markdown
 url = https://github.com/grburgessp/nazgul
