--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
 - '3.7'
-- '3.8'
 install:
-- pip install --upgrade cython coverage pytest pytest-cov  codecov astropy
+- pip install --upgrade cmdstanpy cython coverage pytest pytest-cov  codecov astropy
+- install_cmdstan
 - python setup.py install
 env: NUMBA_DISABLE_JIT=1
 script:
