--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Console
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3)
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)	
     Operating System :: POSIX
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
